<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.linguachat.FragmentB">

    <TextView
        android:id="@+id/review_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/review_concepts"
        android:textAppearance="@style/FirebaseUI.Text.T05"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/added_concepts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_2_concepts_added"
        android:layout_below="@id/review_page_title"/>
    <GridLayout
        android:id="@+id/added_concepts_grid"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/added_concepts"
        android:columnCount="2"
        android:rowCount="2">
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

        </android.support.v7.widget.CardView>
    </GridLayout>

    <TextView
        android:id="@+id/example_concepts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_concepts"
        android:layout_below="@id/added_concepts_grid"/>
    <TextView
        android:id="@+id/welcome_to_the_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the_app"
        android:layout_below="@id/example_concepts"/>

</RelativeLayout>
