<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    tools:context="com.example.linguachat.FragmentD">

    <TextView
        android:id="@+id/profile_title"
        style="@style/FirebaseUI.Text.T05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/profile_title" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profilePhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/profile_title"
        android:layout_marginStart="20dp"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="90dp"
        android:layout_toEndOf="@id/profilePhoto"
        android:text="@string/profile_name" />

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/profilePhoto"
        android:text="@string/profile_email" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/profileEmail"
        android:background="#fff"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_marginTop="100dp">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="One"/>
        </android.support.v7.widget.CardView>

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#fff"
        android:orientation="vertical">

        <Button
            android:id="@+id/profileResetPassword"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/profileLogout"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textAlignment="textStart"
            android:textColor="@color/md_red_500" />

        <Button
            android:id="@+id/profileDelete"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textAlignment="textStart" />
    </LinearLayout>

</RelativeLayout>
