<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/card_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/category_image"
            android:padding="30dp"
            android:src="@mipmap/ic_launcher" />

        <ProgressBar
            android:id="@+id/category_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="15dip"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:indeterminate="false"
            android:maxHeight="10dip"
            android:minHeight="10dip"
            android:progress="0"
            android:progressDrawable="@drawable/white_progress_drawable"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/is_category_locked"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/locked"
            android:visibility="gone"
            app:layout_anchor="@+id/card_bg"
            app:layout_anchorGravity="start|center" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/card_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parentLayout"
        android:layout_centerInParent="true"
        android:text="@string/kirby"
        android:textAlignment="center"
        android:textAppearance="@style/FirebaseUI.Text.T04"
        android:textColor="#000" />

    <TextView
        android:id="@+id/card_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_title"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/desc"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle" />

    <android.support.v7.widget.CardView
        android:id="@+id/start_conversation_btn"
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:layout_below="@id/card_desc"
        android:layout_centerInParent="true"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/card_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:textAlignment="center"
            android:textAppearance="@style/FirebaseUI.Text.BodyText"
            android:textColor="#fff"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/is_category_btn_locked"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/locked_button_test"
            android:visibility="visible" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_conversation_btn"
        android:layout_centerInParent="true"
        android:text="@string/card_number" />

    <TextView
        android:id="@+id/card_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_conversation_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:text="@string/level" />
</RelativeLayout>
