<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardUseCompatPadding="true"
    app:contentPadding="20dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    android:background="#FAFAFA"
    tools:context=".UserProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profilePhoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@mipmap/ic_launcher_round" />
        <TextView
            android:id="@+id/profileProvider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profilePhoto"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/profile_provider"/>
        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileProvider"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/profile_name"/>
        <TextView
            android:id="@+id/profileEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/profile_email"/>
        <Button
            android:id="@+id/profileLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="70dp"
            android:text="logout" />
        <Button
            android:id="@+id/profileDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="Delete" />
    </RelativeLayout>
</android.support.v7.widget.CardView>